<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.caucho</groupId>
  <artifactId>hessian-jakarta</artifactId>
  <version>4.0.66</version>
  
  <packaging>jar</packaging>
  <name>Hessian for Jakarta EE</name>
  <description>Hessian is a compact binary protocol for connecting web services</description>
  <url>http://hessian.caucho.com</url>

  <licenses>
    <license>
      <name>The Apache Software License, Version 1.1</name>
      <url>http://www.apache.org/licenses/LICENSE-1.1.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses> 

  <developers>
    <developer>
      <name>Scott Ferguson</name>
      <email>ferg@caucho.com</email>
      <organization>Caucho Technology, Inc</organization>
      <organizationUrl>https://www.caucho.com</organizationUrl>
    </developer>
  </developers>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <sourceDirectory>${project.basedir}/src</sourceDirectory>

    <resources>
      <resource>
        <directory>${project.basedir}/src/META-INF</directory>
        <targetPath>META-INF</targetPath>
      </resource>
    </resources>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.4.1</version>
          <configuration>
            <archive>
              <manifestFile>${project.basedir}/src/manifest</manifestFile>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.3.1</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
  
  <dependencies>
    <dependency>
      <groupId>jakarta.servlet</groupId>
      <artifactId>jakarta.servlet-api</artifactId>
      <version>6.0.0</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
  
  <scm>
    <url>https://github.com/Vertganti/hessian-jakarta</url>
    <connection>scm:git:https://github.com/Vertganti/hessian-jakarta.git</connection>
  </scm>
  
  <distributionManagement>
    <site>
      <id>hessian-jakarta</id>
      <url>scm:git:https://github.com/Vertganti/hessian-jakarta.git</url>
    </site>
    <repository>
      <id>github</id>
      <name>Github Packages</name>			
      <url>https://maven.pkg.github.com/Vertganti/hessian-jakarta</url>
    </repository>
  </distributionManagement>
</project>

